--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,9 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/MainLevel.MainLevel
+GameDefaultMap=/Game/Levels/LBP_MainLevel.LBP_MainLevel
 GlobalDefaultGameMode=/Game/MainBlueprints/GameModeRG.GameModeRG_C
-EditorStartupMap=/Game/Levels/MainLevel.MainLevel
+EditorStartupMap=/Game/Levels/LBP_MainLevel.LBP_MainLevel
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
